# fso-shadertool

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: release.yml
shadertool/: CMakeLists.txt  main.cpp  prefix_header.h
shadertool/processor/: BaseShaderProcessor.cpp  BaseShaderProcessor.h  GlslOutputProcessor.cpp  GlslOutputProcessor.h  UniformStructsProcessor.cpp  UniformStructsProcessor.h
